I edited various aspects of the style including a further refinement of the CSS code and an addition to the media query in order to make the site more adaptive to smaller screen sizes. I defined the images by pixel dimensions so that they do not distort depending on the screen size. I defined the text-color and heading-color as CSS variables which I used through the code so that they can be changed easily in future iterations. This was required as the white text defined by the wildcard was overriding the quiz Javascript and preventing it from turning the correct answers green and the incorrect answers red. I also changed the dropdown navigation for the future page so that it only includes a link to the overview and images sections, alongside debugging various other minor errors.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 * {
   padding: 0;
   margin: 0;
-  color: white;
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   scroll-behavior: smooth;
@@ -13,6 +12,8 @@
 :root {
   --primary-color: #5AA6DE;
   --secondary-color: #468ED0;
+  --text-color: white;
+  --heading-color: black;
   --border: 2px solid white;
 }
 
@@ -34,11 +35,12 @@ header {
 
 .dropdown a {
   list-style: none;
-  padding: 15px;
+  padding: 20px;
+  color: var(--text-color);
 }
 
 .dropdown i {
-  padding: 0 10px 0 10px;
+  padding: 0 10px;
 }
 
 .dropdown a:hover {
@@ -65,15 +67,14 @@ header {
   z-index: -1;
   height: 100vh;
   width: 100vw;
-  display: flex;
-  justify-content: center;
-  text-align: justify;
+  text-align: center;
+  color: var(--text-color);
 }
 
 .showcase h1:not(#home h1) {
   z-index: 0;
   position: relative;
-  padding: 50vh;
+  padding: 40vh 10vw;
   font-size: 40px;
 }
 
@@ -87,7 +88,7 @@ header {
   position: absolute;
   top: 20vh;
   left: 0;
-  margin: 10px;
+  padding: 20px;
   font-size: 30px;
   font-style: italic;
   text-align: left;
@@ -102,8 +103,8 @@ header {
   font-style: normal;
 }
 
-.showcase p {
-  top: 30vh;
+.showcase i {
+  color: var(--text-color);
 }
 
 .dash {
@@ -114,7 +115,12 @@ header {
 #scroll-down {
   position: absolute;
   top: 80vh;
-  right: 48vw;
+  left: 48vw;
+}
+
+.scroll-down {
+  position: relative;
+  bottom: 5vh;
 }
 
 /*Nav Toggle at Small Screen Size*/
@@ -124,21 +130,7 @@ header {
   font-size: 40px;
   margin: 20px;
   padding: 0;
-}
-
-@media only screen and (max-width: 600px) {
-  .nav-toggle {
-    display: block;
-    float: right;
-  }
-
-  .links {
-    display: none;
-  }
-
-  .showlinks {
-    display: flex;
-  }
+  color: var(--text-color);
 }
 
 /*Showcase Background Images*/
@@ -214,41 +206,44 @@ header {
 
 .about h1, .about p, .quiz h1 {
   padding: 10px 10%;
-  color: black;
+  color: var(--heading-color);
 }
 
 .about p {
   text-align: justify;
-  color: white;
+  color: var(--text-color);
 }
 
 .about img {
-  max-width: 40vw;
-  max-height: 60vh;
+  max-width: 500px;
+  max-height: 500px;
+  padding: 20px;
 }
 
 /*Quiz*/
 
 .quiz {
-  padding: 20px 5%;
+  padding: 20px;
   margin: 0 auto;
 }
 
 .question {
-  color: black;
+  color: var(--heading-color);
 	font-size: 24px;
 	padding: 20px 0 10px 0;
 }
 
 .answers {
+  color: var(--text-color);
   margin-bottom: 20px;
 	text-align: justify;
-  padding: 0 20%;
+  padding: 0 10%;
   line-height: 1.5;
 }
 
 #submit, #check {
   background: var(--secondary-color);
+  color: var(--text-color);
   border: var(--border);
   font-size: 20px;
   padding: 10px;
@@ -263,27 +258,37 @@ header {
 
 /*Image Slider*/
 
+.slider {
+  background: var(--primary-color);
+  opacity: 0.6;
+  border-radius: 10px;
+  border: var(--border);
+  padding: 20px;
+}
+
 .slider-container {
-  width: 40vw;
-  height: 40vh;
-  border: 2px solid black;
+  width: 700px;
+  height: 400px;
+  border: var(--border);
   margin: 0 auto;
   overflow: hidden;
 }
 
 .slide img {
-  width: 40vw;
-  height: 40vh;
+  width: 700px;
+  height: 400px;
 }
 
 .slider-btn-container {
   text-align: center;
-  color: black;
+  color: var(--heading-color);
 }
 
 .prevBtn, .nextBtn {
-  width: 20vw;
-  color: black;
+  margin: 5px 0;
+  padding: 5px;
+  width: 350px;
+  color: var(--heading-color);
 }
 
 /*Tab System*/
@@ -300,12 +305,13 @@ header {
 #content p {
   padding: 20px 10vw;
   text-align: justify;
+  color: var(--text-color);
 }
 
 #content h1 {
   text-align: center;
   padding-top: 20px;
-  color: black;
+  color: var(--heading-color);
 }
 
 #content img {
@@ -325,6 +331,7 @@ header {
 .tab-btn {
   font-size: 20px;
   background: var(--secondary-color);
+  color: var(--text-color);
   padding: 10px 20px;
   margin: 5px;
   border-radius: 10px;
@@ -368,13 +375,13 @@ header {
 }
 
 #drag-and-drop h1 {
-  color: black;
+  color: var(--heading-color);
   padding: 20px;
 }
 
 .parent {
   border: var(--border);
-  color: black;
+  color: var(--heading-color);
   display: flex;
   font-family: sans-serif;
   font-weight: bold;
@@ -388,6 +395,7 @@ header {
 }
 
 .draggable {
+  color: var(--text-color);
   background-color: #4AAE9B;
   font-weight: normal;
   margin: 10px;
@@ -410,6 +418,7 @@ header {
 
 footer {
   background: var(--secondary-color);
+  color: var(--text-color);
   opacity: 0.9;
   text-align: center;
   font-size: 20px;
@@ -417,6 +426,47 @@ footer {
 }
 
 footer i {
+  color: var(--text-color);
   padding: 10px;
   font-size: 30px;
+}
+
+@media only screen and (max-width: 800px) {
+  .nav-toggle {
+    display: block;
+    float: right;
+  }
+
+  .links {
+    display: none;
+  }
+
+  .showlinks {
+    display: flex;
+    padding: 5px;
+  }
+
+  .showcase span {
+    font-size: 60px;
+  }
+
+  .about img {
+    max-width: 70vw;
+    max-height: 60vh;
+  }
+
+  .tab-btn {
+    width: 40vw;
+    height: 6vh;
+    padding: 0;
+  }
+
+  .slider-container, .slide img {
+    width: 80vw;
+    height: 40vh;
+  }
+
+  .prevBtn, .nextBtn {
+    width: 40vw;
+  }
 }
